--- a/CustomInvitationSample/CustomInvitationSample/Base.lproj/Main.storyboard
+++ b/CustomInvitationSample/CustomInvitationSample/Base.lproj/Main.storyboard
@@ -112,7 +112,7 @@
                                     <action selector="handleShowInviteTouchUpInside:" destination="bSi-nl-Gvc" eventType="touchUpInside" id="pfD-dw-mKB"/>
                                 </connections>
                             </button>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" scrollEnabled="NO" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="SWz-h0-V9z">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" scrollEnabled="NO" editable="NO" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="SWz-h0-V9z">
                                 <rect key="frame" x="26" y="84" width="323" height="133"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -165,7 +165,7 @@
                                     <action selector="handleShowInviteTouchUpInside:" destination="NcQ-xA-o44" eventType="touchUpInside" id="Q1t-fd-A1C"/>
                                 </connections>
                             </button>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" scrollEnabled="NO" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="uqb-hI-g8B">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" scrollEnabled="NO" editable="NO" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="uqb-hI-g8B">
                                 <rect key="frame" x="26" y="84" width="323" height="183.5"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
